updated dictionaries, stopped word wrapping

--- a/board/template/wordbank.css
+++ b/board/template/wordbank.css
@@ -94,7 +94,7 @@
     text-align: center;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     font-size: x-large;       
-    word-break: break-all;
+    
 }
 
 table {
